<resources>
    <string name="app_name">SignUpForm</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="submit">SUBMIT</string>
    <string name="username_label">Username:</string>
    <string name="username_input_hint">Please enter your username</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">Please enter your password</string>
    <string name="confirmation_label">Confirm:</string>
    <string name="confirmation_hint">Please confirm your password</string>
    <string name="random">random</string>
</resources>
