<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ato.signupform.LoginActivity"
    tools:showIn="@layout/activity_login">


    <LinearLayout
        android:id="@+id/fields"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/username_label"
                android:text="@string/username_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/username_input"
                android:hint="@string/username_input_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/password_label"
                android:text="@string/password_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/password_input"
                android:hint="@string/password_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/confirmation_label"
                android:text="@string/confirmation_label"
                android:layout_weight="25"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/confirmation_input"
                android:hint="@string/confirmation_hint"
                android:layout_weight="75"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_below="@id/fields"
        android:layout_alignRight="@id/fields"
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>